# tkinter_express

./: ex.txt  pyproject.toml  tk_express.py
tk_express/: __init__.py  row_window.py  tk_express.py
