[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tk-express"
version = "0.1.0"
description = "Biblioteca de widgets Tkinter com ícones de erro e sucesso"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Liedson Rocha Ferreira"}
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Gorpu/tk-express"

[tool.setuptools.package-data]
tk_express = ["assets/*"]
